30.05.23 fix letter spacing CSS

--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -114,7 +114,7 @@
         .playForm {
             width: 90%;
             .playWord {
-                letter-spacing: 10px;
+                letter-spacing: 3px;
                 font-weight: 900;
                 font-family: 'Tilt Warp', cursive;
                 font-size: 40px;
